2016-11-09  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* 39853: Completion/Unix/Command/_subversion: Accept long
	options in the '--foo=bar' syntax.

2016-11-08  Peter Stephenson  <p.stephenson@samsung.com>

	* Sebastian: 39871: cut down number of strlen()s in getstrvalue().

2016-11-08  Jun-ichi Takimoto <takimoto-j@kba.biglobe.ne.jp>

	* 39857: Completion/Unix/Command/_top: add support for darwin,
	with improvements on linux etc.

2016-11-08  Peter Stephenson  <p.stephenson@samsung.com>

	* 39870: Src/builtin.c, Test/C03traps.ztst: ensure exit trap can
	always run.

	* unposted: Src/utils.c: follow up to 39867: don't need test
	against zero any more.

	* Sebastian: 39869: can transfer ownership of core of array when
	assigning.

	* 39867: Src/utils.c: cast to unsigned char to compare against
	0x7f.

2016-11-07  Peter Stephenson  <p.stephenson@samsung.com>

	*  Felix Neumärker: Completion/Unix/Command/_module: follow
	symbolic links and use _multi_parts for paths.

	* zsh-users/22083: Doc/Zsh/expn.yo: attempt to explain a bit
	better what a "word" is in parameter substitution.

2016-11-07  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* 39840: Completion/Unix/Command/_cpio: Declare variable's
	type correctly.

2016-11-07  Jun-ichi Takimoto <takimoto-j@kba.biglobe.ne.jp>

	* 39728: Src/zsh_system.h, Src/Modules/datetime.c: define
	_GNU_SOURCE on Cygwin

	* 39855: Completion/BSD/Command/_jot: new completion

2016-11-07  Frank Terbeck  <ft@bewatermyfriend.org>

	* 39849: Completion/Unix/Command/_tmux: _tmux: Remove
	set-remain-on-exit

2016-11-06  Frank Terbeck  <ft@bewatermyfriend.org>

	* 39847: Util/check-tmux-state: Update helper function name
	pattern

	* 39848: Completion/Unix/Command/_tmux: _tmux: Update options to
	latest tmux

2016-11-05  Barton E. Schaefer  <schaefer@zsh.org>

	* unposted: Completion/compaudit: tweak replacement getent
	to handle /etc/hosts format.

	* Thomas Bereknyei, Mic92: 39831: Completion/compaudit: find